fix popular channels going out of place

--- a/client/src/components/Home/HomeGuestPage/styles/HomeGuest.module.css
+++ b/client/src/components/Home/HomeGuestPage/styles/HomeGuest.module.css
@@ -16,6 +16,17 @@
       grid-template-columns:70% 30%;
       grid-template-rows: 1fr;
       gap:20px;
-      height: fit-content
+      height: fit-content;
+      width: 85%;
   }
+}
+.fallback{
+  width: 100%;
+  content: "No Posts";
+}
+.left-container{
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
 }
